--- a/20230609_nav/css/style.css
+++ b/20230609_nav/css/style.css
@@ -3,7 +3,8 @@
 :root {
     /* color */
     --first-color: #008156;
-    --second-color: #efb11c;
+    --second-color: rgb(239, 177, 28);
+    -body-color: #0000;
 
     --body-font: 'Nanum Myeongjo', serif;
     --h1-font-size: 2rem;
@@ -32,7 +33,61 @@ nav{
     height: 44px;
 }
 .nav.container {
-    display:flex;
+    display:flex; /* 기본값: 수평 정렬 */
     justify-content: space-between;
     align-items: center;
+    color: #fff;
+    /* padding-left: 16px;
+    padding-right: 16px; */
+    padding: 0 16px; /* 위 아래: 0, 왼오른: 16px*/
+}
+.nav.container a{
+    color: #fff;
+}
+.nav-list{
+    display: flex;
+    column-gap: 80px;
+}
+.nav-toggle{
+    font-size: var(--h2-font-size); /* 햄버거 메뉴 살짝 크게 */
+    visibility: hidden; /* 햄버거 메뉴 안 보이게 */ /* 시험 나옴 */
+}
+
+@media screen and (max-width: 540px) {
+    /* .nav-logo 가운데 */
+    .nav-logo{
+        margin: 0 auto;
+    }
+  
+    /* .nav-list navbar 아래로 */
+    .nav-list {
+        position: absolute;
+        top: 44px; /*navbar 아래로*/
+        right: 0;   /* 너비를 양 옆으로 늘리기 */
+        left: 0; /* 너비를 양 옆으로 늘리기 */
+        flex-direction: column; /* 수직 배열 */
+        align-items: center;    /* 교차축 가운데 */
+        background-color: rgb(239, 177, 28, 0.4);
+        backdrop-filter: blur(8px); /* 블러 효과 */
+        height: 0;
+        overflow: hidden;
+    }
+    .nav-item{
+        padding: 1em 0;
+        border-bottom: 2px solid #fff;
+    }
+
+    .nav-link{
+        display: black;
+    }
+
+    /* .nav-toggle 보이게 */
+    .nav-toggle{
+        visibility: visible;    
+        position: absolute;     /* nav-logo 가운데로 정렬 */
+        right: 16px;            /* 오른쪽 여백 16px 위치로 */
+    }
+
+    /* show-menu 하면, .nav-list 보이게 */
+    /* show-menu 하면, .nav-toggle 버튼 x로 */
 }
