--- a/20230609_nav/css/style.css
+++ b/20230609_nav/css/style.css
@@ -66,7 +66,8 @@ nav{
         right: 0;   /* 너비를 양 옆으로 늘리기 */
         left: 0; /* 너비를 양 옆으로 늘리기 */
         flex-direction: column; /* 수직 배열 */
-        align-items: center;    /* 교차축 가운데 */
+        /* align-items: center;    교차축 가운데 */ 
+        text-align: center;     /* 글자만 가운데로 */
         background-color: rgb(239, 177, 28, 0.4);
         backdrop-filter: blur(8px); /* 블러 효과 */
         height: 0;
