스타일 정리

--- a/20230620_bookreviewcalendar/css/review.css
+++ b/20230620_bookreviewcalendar/css/review.css
@@ -1,23 +1,80 @@
 main{
+    margin: 0 auto;
     margin-top: calc(44px + 100px);
+    width: calc(100% - 100px * 2);  /*띄어쓰기 있어야 함*/
 }
-main div{
+
+.container {
+    display: flex;
+}
+
+.image-info-groups{
+    /* flex-wrap: wrap; 태블릿 너비일때 info-groups 전체가 먼저 wrap 되어버려서 주석 처리*/
+}
+.info-group {
+    flex-wrap: wrap;
+    margin: 0 40 px;
+    gap: 40px
+}
+
+.info-groups {
+    flex-direction: column;
+    gap: 40px;
+}
+
+.info {
+    flex-direction: column;
+}
+.title,
+.author,
+.publisher,
+.read-date
+.synopsis,
+.phrase{
+    font-size: 1.25rem;
+}
+.label{
+    /*폰트 컬러는 font-color 아님*/
+    color: ;
+}
+
+.reviews {
+    flex-direction: column;
+}
+.review {
+    flex-direction: column;
+}
+
+@media screen and (max-width: 540px) {
+    main{
+        margin-top:calc(44px + 40px)
+    }
+    .image-info-groups {
+        flex-direction: column;
+    }
+    .book-image{
+        margin: 0 auto; /*이미지가 있는 div 가운데로 */
+    }
+    .info-groups{
+        flex-direction: column;
+        margin: 40px 0 0;
+    }
+}
+
+/* delete me*/
+/* main div {
     border: 2px solid black;
-}
-.review{
-    display: flex;
-    flex-direction: column;
-}
-.row-container{
-    display: flex;
-}
-.row-container:nth-child(2){
-    flex-direction: column;
-}
-.book{
+} */
+.book-image{
     width: 200px;
     height: 400px;
 }
-.explain{
-    display: flex;
+.book-image > img{
+    display: block; /* 이미지에 약간 너비 생기는 문제 해결*/
+}
+.info{
+    height: 100px;
+}
+.review{
+    height: 100px;
 }
