--- a/20230620_bookreviewcalendar/css/calendar.css
+++ b/20230620_bookreviewcalendar/css/calendar.css
@@ -11,6 +11,11 @@ main{
     column-gap: 40px;
     margin-bottom: 40px; /*title과 weekday사이*/
 }
+.left,
+.right {
+    cursor: pointer;
+}
+
 .weekday.container{
     display: grid;
     grid-template-columns: repeat(7, 1fr);
@@ -34,19 +39,19 @@ main{
 }
 
 /* 오늘에 맞는 요일로 이동하자 */
-.date.item:nth-child(1){
+/* .date.item:nth-child(1){
     grid-column-start: 6;
-}
+} */
 
 /* 토요일을 파란색으로 */
-.date.item:nth-child(7n+2){
+/* .date.item:nth-child(7n+2){
     color:blue;
-}
+} */
 
 /* 일요일을 빨간색으로 */
-.date.item:nth-child(7n+3){
+/* .date.item:nth-child(7n+3){
     color:red;
-}
+} */
 
 .review.flex-container{
     display: flex;
